[package]
name = "tilejson"
version = "0.4.0"
description = "Library for serializing the TileJSON file format"
authors = [
    "Stepan Kuzmin <to.stepan.kuzmin@gmail.com>",
    "Yuri Astrakhan <YuriAstrakhan@gmail.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/tilejson"
homepage = "https://github.com/georust/tilejson"
repository = "https://github.com/georust/tilejson"
readme = "README.md"
keywords = ["maplibre", "mapbox", "tilejson", "serde"]
categories = ["science::geo"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_tuple = "0.5"
thiserror = "1"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[lints.clippy]
pedantic = "warn"
